Checkboxes now appear in Safari; Fixed some invalid HTML in new work form; Still broken in IE.

--- a/public/stylesheets/forms.css
+++ b/public/stylesheets/forms.css
@@ -59,7 +59,7 @@ img#openid	{ margin-left:-20px; vertical-align:middle; }
 /*work-meta  and work-show rules in story-views.css */
 #work-form legend {position:static; margin:0; padding:0.375em; background:#fffef9; border:1px solid #bbb;}
 .works-preview legend, .works-update legend {color:#fff;}
-#work-form input, #work-form select, #work-form textarea {width:99%; margin:auto}
+#work-form input[type="text"], #work-form select, #work-form textarea { width:99%; margin:auto}
 #work-form fieldset, #upload-work-form fieldset { background:#fffef9; font-size:0.875em; margin: 0.5625em 0; padding:0.375em 1.5em; border:1px solid #bbb; }
 #work-form fieldset fieldset { line-height:1.5; margin: 0 auto 0.5625em auto; }
 
@@ -86,12 +86,19 @@ dd#co-authors { margin:0 auto 0.875em auto; padding:0.375em; border:1px solid #b
 input#work_parent_url {margin:0.375em auto 0.875em auto;}
 dd#seriesmanage {clear:both; float:none;}
 #seriesmanage dt, dt.work-restricted, dt.work-is_wip, dt.work-is_serial, dt.work-is-backdated{ width: 50%;}
-#work-form .preface dt.work-endnotes { width: 8em; clear: left; float: left;}
+#main #work-form dd, #work-form dt { margin: 0.25em 0; padding: 0.25em 0; }
+#work-form .preface dt.work-endnotes { width: 10em; clear: left; float: left;}
+#work-form p.label { font-size: 1em; }
 #seriesmanage dd, dd.work-restricted, dd.work-is_wip, dd.work-is_serial	{ clear:right; margin:0; }
 #work-form .preface dd.work-endnotes { float: left; margin: 0;}
-p.rtf-html-switch {margin:0; padding:0 0.875em 0; text-align:right; }
-.rtf-html-switch span {background:#f0f0ee; padding:0.5625em 0.5625em 0 0.5625em; border:1px solid #ddd;}
-#work-form textarea#content { height:31.25em;  margin:-0.625em auto auto;}
+#main p.rtf-html-switch {margin:0 0 -0.55em 0; padding:0 0.875em 0; text-align:right; }
+#main .rtf-html-switch span {background:#f0f0ee; padding:0.5625em 0.5625em 0.2em 0.5625em; border:1px solid #ddd;}
+#main div.rtf-html-field { margin:0.643em 0; }
+
+#work-form textarea#content { height:31.25em;}
+#work-form dd.optionalField { clear: left; width: 100%; }
+#work-form dd.optionalField dd { font-size: 1em;}
+#work-form .optionalField {font-size: 1em;}
 
 #work-form p.submit input { font-size:1em; width: auto; text-align:center}
 
